rest-hero-client/src/stuff/heroclientvservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: heroclientvs
  namespace: hero-client
spec:
  hosts:
    - istio-ingressgateway-istio-system.apps.cluster-dqlzl.dqlzl.sandbox1722.opentlc.com
    - rest-hero-client
  gateways:
  - hero-gateway
  http:
  - match:
    - uri:
        prefix: /hellohero
    route:
    - destination:
        host: rest-hero-client 
        port:
          number: 80
