rest-hero-client/src/stuff/herovservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: herovs
spec:
  hosts:
  - "*"
  gateways:
  - hero-gateway
  http:
  - match:
    - uri:
        prefix: /hero
    route:
    - destination:
        host: hero 
        port:
          number: 80
